--- a/page-cadastro.html
+++ b/page-cadastro.html
@@ -395,7 +395,7 @@ call = setInterval(callback_CARREGANDO, 100);
                 </div>
                 <div class="form-group">
                   <label for="senha">Insira uma senha para acesso:</label>
-                  <input class="form-control" id="senha" name="senha" placeholder="Insira uma senha" type="text" maxlength="20">
+                  <input class="form-control" id="senha" name="senha" placeholder="Insira uma senha" type="password" maxlength="20">
                   <span style="font-size:x-small">min 6 - máx 20</span> </div>
                 <div class="form-group">
                   <label for="senha">Confirme a mesma senha:</label>
