--- a/index-cadastro.html
+++ b/index-cadastro.html
@@ -154,7 +154,7 @@ call = setInterval(callback_CARREGANDO, 100);
           <!--DADOS DA PÁGINA DADOS -->
           <div id="info_geral" class="alert alert-info center"></div>
           <div align="center" id="cadastro" class="cadastro_div">
-            <form id="form_cadastro" class="cadastro_form" method="post">
+            <form id="form_cadastro" class="cadastro_form" method="post" action="javascript:login();">
               <div class="form-group">
                 <label for="email">Login</label>
                 <input type="email" class="form-control feedback" id="email" placeholder="Insira seu email de cadastro" maxlength="100" required>
