Mudar botão "Sair" para "Profile" no index

--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@ function consulta_inicial(){
 			} else {
 				console.log('log sucesso = ', json.logado);
 				if(json.logado == 'sucesso'){
-					$('#btn_entrar').html('SAIR&nbsp;&nbsp;<img src="images/icones/logado.png" alt="Logado" style="max-height:16px; margin-bottom:3px;">');
+					$('#btn_entrar').html('Perfil&nbsp;&nbsp;<img src="images/icones/logado.png" alt="Logado" style="max-height:16px; margin-bottom:3px;">');
 				}
 			}
 		}
