Alinhar o footer com o final da página index

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@ call = setInterval(callback_CARREGANDO, 100);
 	margin-top: 10px; 
 	font-family: Roboto;
 	text-transform: uppercase;
+	margin-bottom: 0;
 }
 
 @media (min-width:992px) {
