Organizar área de trabalho no código

--- a/index-cadastro.html
+++ b/index-cadastro.html
@@ -198,9 +198,15 @@ call = setInterval(callback_CARREGANDO, 100);
 						<button id="btn_avancar" type="button" name="mapa" class="btn btn-success btn-block btn-lg btns-retornos no-display" onClick="avancar_page(name)">AVANÇAR</button>
 						<button id="btn_avancar_modal" name="cad_prof" type="button" class="btn btn-primary btn-block btn-lg btns-retornos no-display" onClick="avancar_page(name)">ACEITAR CONTINUAR</button>
 					</div>
-					<div id="footer_retorno_base"  class="modal-footer"> <a id="btn_acessar_dp" type="button" onclick="avancar_page('cad_prof')" target="_self" class="btn btn-blue btn-block btn-xs btns-retornos 1" style="font-size:xx-small">ACESSAR MEUS DADOS<br>
-							PARA TORCAR MINHA SENHA</a> <a id="btn_outro_email" type="button" class="btn btn-danger btn-lg btn-block btns-retornos no-display" href="page-cadastro.html" target="_blank">Quero me cadastrar<br>
-							com outro email</a> <img src="images/logos/logo-dsb-2-gg.jpg" class="img-responsive" alt="logo"> </div>
+					<div id="footer_retorno_base"  class="modal-footer">
+						<a id="btn_acessar_dp" type="button" onclick="avancar_page('cad_prof')" target="_self" class="btn btn-blue btn-block btn-xs btns-retornos 1" style="font-size:xx-small">
+							ACESSAR MEUS DADOS<br>
+							PARA TORCAR MINHA SENHA
+						</a>
+						<a id="btn_outro_email" type="button" class="btn btn-danger btn-lg btn-block btns-retornos no-display" href="page-cadastro.html" target="_blank">Quero me cadastrar
+							<br>
+							com outro email</a> <img src="images/logos/logo-dsb-2-gg.jpg" class="img-responsive" alt="logo">
+					</div>
 				</div>
 			</div>
 		</div>
